Add End Point Get All Transactions
